...
                }

                SelectionActionButton(
                    enabled = state.canEditSelection,
                    onClick = actions.onEditSelectedBook,
                    contentColor = MaterialTheme.colorScheme.primary,
                    contentDescription = "Edit Selected Book",
                    icon = Icons.Default.Edit,
                )
            }
        }
    }
}
...
